updates list neighborhood request to expected openapi
